[gd_scene load_steps=7 format=3 uid="uid://c0rsug8ua21us"]

[ext_resource type="Texture2D" uid="uid://1j04wp1p0tjw" path="res://sprites/sprites/bot/right_gatlin.png" id="1_rnk5q"]
[ext_resource type="Script" path="res://player/armament.gd" id="2_os7ny"]
[ext_resource type="Script" path="res://components/clamped_rotation.gd" id="3_n57tt"]
[ext_resource type="Script" path="res://components/weapon.gd" id="4_2co0p"]
[ext_resource type="PackedScene" uid="uid://8wpsaxivv7xs" path="res://weapons/bullet.tscn" id="5_64deo"]
[ext_resource type="Texture2D" uid="uid://cv1kynbh5djqf" path="res://sprites/sprites/bot/large_muzzle_flash.png" id="6_5pt7b"]

[node name="gatlin" type="Sprite2D" node_paths=PackedStringArray("weapon_1")]
position = Vector2(-112, -436)
texture = ExtResource("1_rnk5q")
offset = Vector2(197, 20)
script = ExtResource("2_os7ny")
weapon_1 = NodePath("LeftWeapon")

[node name="RotationClamp" type="Node" parent="."]
script = ExtResource("3_n57tt")
min_angle = -45.0
max_angle = 35.0

[node name="LeftMuzzle" type="Marker2D" parent="."]
position = Vector2(465, 23)

[node name="LeftWeapon" type="Node" parent="." node_paths=PackedStringArray("muzzle", "muzzle_flash")]
script = ExtResource("4_2co0p")
muzzle = NodePath("../LeftMuzzle")
rate_of_fire = 0.04
bullet = ExtResource("5_64deo")
muzzle_flash = NodePath("../MuzzleFlash")

[node name="MuzzleFlash" type="Sprite2D" parent="."]
position = Vector2(545, 20)
rotation = 1.5708
scale = Vector2(2.02456, 4.54192)
texture = ExtResource("6_5pt7b")

[connection signal="rotation_clamped" from="RotationClamp" to="." method="_on_rotation_clamp_rotation_clamped"]
